# test_assignment

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: run-tests.yml
data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 1f3b3bf2e25c1cd7.json  22cbfe5d2901dd1d.txt  32c9a73e9a44bba6.txt  5ce63fb12318035.txt  7dcad653bcd044ae.txt  7f7d2f4d2237c6aa.txt  90317649c1786ade.json  90febe5c1d3a443b.txt  9e947cfc442d8b16.txt  a5c4613e11e18529.txt  ae817d439ba0486b.txt  b13d5b8e30209379.txt  b38b66289240ad57.txt  bcce42e573fd8207.txt  beaa871377529550.txt  bed57e088cd9f08c.txt  c89baa6448a75e1a.txt  cf93128702e87677.txt  d2f49c3868ff78bf.txt  d47fd719a0211202.txt  e51089312c81f30d.json  e5a08b9100307a6b.json  e7da0981586ea167.txt  e8d43af838331b5f.txt  f054f7dda074bae7.txt
data/test-cases/: 3dd65a584e2de7bb.json  4ed3bfe63f61f9fd.json  7de4fce425a0d774.json  8fa04e89e3c8287d.json  97877d21ca690ff9.json  9b147a1ec24d104c.json  9f79e94c4422d866.json  cbb39fccc082c831.json  dc7157df0074dc64.json  dcc7cf23060bf16.json  f3c0409c88077f75.json  fd77674eab732ebc.json
export/: influxDbData.txt  prometheusData.txt
framework/: utils.py
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
widgets/: behaviors.json  categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+27 files in other folders)
